<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".ui.event.about.reglament.ReglamentFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="@dimen/middle_margin"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/categoryOfEvent"
            style="@style/big_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/def_category"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/big_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/reglamentProgramm"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryOfEvent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/mandate"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/reglamentMandateTv"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:gravity="left"
            tools:text="16 июля с 09:00 до 22:00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/address"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reglamentMandateTv" />

        <TextView
            android:id="@+id/reglamentAddress"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:gravity="left"
            tools:text="пр.Манаса 54, Спорт Арена"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/contact"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reglamentAddress" />

        <TextView
            android:id="@+id/reglamentContactTv"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:gravity="left"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:text="@string/def_number" />


        <TextView
            android:id="@+id/textView7"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/judges"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reglamentContactTv" />

        <TextView
            android:id="@+id/reglementJudgesOfEvent"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:gravity="left"
            android:text="Зарегистрировано:0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/protocol"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reglementJudgesOfEvent" />

        <TextView
            android:id="@+id/reglamentProtocolTv"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/protocolUnderLine"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>