<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.login.LoginFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_background" />

    <TextView
        style="@style/middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="164dp"
        android:text="@string/log"
        android:textAllCaps="true"
        android:textSize="32sp" />

    <ImageView
        android:id="@+id/btnBackFromLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back_arrow"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ic_logo_red_middle" />

    <include
        android:id="@+id/error_page"
        layout="@layout/error_page"
        android:visibility="gone" />

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_bar"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_page"
        android:layout_width="328dp"
        android:layout_height="198dp"
        android:layout_gravity="center"
        android:background="@drawable/login_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:text="@string/phone_number"
            android:textAppearance="@style/text_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/editTextNumber"
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:hint="@string/phone_default"
            android:inputType="phone"
            android:letterSpacing="0.12"
            android:textAppearance="@style/edit_text_style"
            android:textColor="#707070"
                android:textColorHint="@color/mask"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:mask="+996 (###) ##-##-##" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/btn_red_style"
            android:layout_width="280dp"
            android:layout_height="58dp"
            android:gravity="center"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/code_page"
        android:layout_width="328dp"
        android:layout_height="348dp"
        android:layout_gravity="center"
        android:background="@drawable/code_background"
        android:visibility="gone">

        <TextView
            android:id="@+id/textCode"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="0sp"
            android:text="@string/code_infornation"
            android:textAppearance="@style/middle_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="110dp"
            android:text="@string/code_"
            android:textAppearance="@style/text_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/codeEditText"
            style="@style/edit_style"
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/write_in_code"
            android:textColor="#707070"
            android:textColorHint="@color/gray_darkest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <Button
            android:id="@+id/btnConfirmCode"
            style="@style/btn_red_style"
            android:layout_width="280dp"
            android:layout_height="58dp"
            android:layout_marginTop="14dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/codeEditText" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendAgain"
            style="@style/btn_red_style"
            android:layout_width="280dp"
            android:layout_height="47dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/btn_white_corners"
            android:backgroundTint="@color/white"
            android:text="@string/send_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirmCode"
            tools:targetApi="lollipop" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>