<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.coach.event.AboutEventFragment">

    <Toolbar
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/btnBackFromSubmitApplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="15dp"
            android:src="@drawable/ic_back_arrow" />
        <TextView
            style="@style/tab_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/oswald_bold"
            android:gravity="start|center"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:text="@string/reglamentProgramm" />

    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v">

        <TextView
            android:id="@+id/categoryOfEvent"
            style="@style/tab_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/def_category"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView5"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/mandate"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryOfEvent" />

        <TextView
            android:id="@+id/reglamentMandateTv"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:gravity="left"
            android:text="16 июля с 09:00 до 22:00"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/address"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reglamentMandateTv" />

        <TextView
            android:id="@+id/reglamentAddress"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:gravity="left"
            android:text="пр.Манаса 54, Спорт Арена"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />
        <TextView
            android:id="@+id/textView9"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/contact"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reglamentAddress" />

        <TextView
            android:id="@+id/reglamentContactTv"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:gravity="left"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:text="@string/def_number" />



        <TextView
            android:id="@+id/textView7"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/judges"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reglamentContactTv" />

        <TextView
            android:id="@+id/reglementJudgesOfEvent"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:gravity="left"
            android:text="Зарегистрировано:0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            style="@style/middle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/protocol"
            android:textSize="@dimen/text_middle_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reglementJudgesOfEvent" />

        <TextView
            android:id="@+id/reglamentProtocolTv"
            style="@style/text_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="@dimen/text_margin"
            android:gravity="left"
            android:text="@string/protocolUnderLine"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_bar"
        android:visibility="gone"/>


    <Button
        android:id="@+id/btnSubmit"
        style="@style/btn_red_style"
        android:textAppearance="@style/btn_text_style"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginTop="14dp"
        android:text="@string/submit_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ui" />



</androidx.constraintlayout.widget.ConstraintLayout>