<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <ImageView
        android:id="@+id/newsImage"
        android:layout_width="395dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:foreground="@drawable/gradient"
        tools:src="@drawable/photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="@+id/newsImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newsImage">

        <TextView
            android:id="@+id/newsSportType"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_margin="16dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:background="@drawable/ic_frame_1143"
            android:text="@string/def_sport_type"
            android:gravity="center"
            android:textAllCaps="true"
            android:textAppearance="@style/text_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newsTitle"
            style="@style/btn_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="left"
            android:letterSpacing="0.01"
            android:text="@string/def"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/newsDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/newsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="5dp"
            android:gravity="top"
            android:text="@string/def_date"
            android:textAppearance="@style/date_text_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>